--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,9 +1,14 @@
 spring:
-    datasource:
-        driver-class-name: org.postgresql.Driver
-        url: jdbc:postgresql://localhost:5432/hibernate-knowledge
-        username: postgres
-        password: 12345!fra
-    jpa:
-        hibernate.ddl-auto: update
-        properties.hibernate.dialect: org.hibernate.dialect.PostgreSQLDialect
+  datasource:
+    driver-class-name: org.postgresql.Driver
+    url: jdbc:postgresql://localhost:5432/hibernate-knowledge
+    username: postgres
+    password: 12345!fra
+  jpa:
+    open-in-view: false
+    hibernate.ddl-auto: update
+    properties:
+      hibernate.dialect: org.hibernate.dialect.PostgreSQLDialect
+logging.level:
+  org.hibernate.type.descriptor.sql: trace
+  logger.org.hibernate.SQL: debug
