--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -13,7 +13,10 @@ spring:
       hibernate.jdbc.batch_size: 5 # Hibernate will silently disable batch inserts if we use GenerationType.IDENTITY
       hibernate.order_inserts: true
       hibernate.order_updates: true
-      hibernate.batch_versioned_data: true 
+      hibernate.batch_versioned_data: true
+      hibernate.format_sql: true
+    show-sql: true
+      
 logging.level:
   org.hibernate.type.descriptor.sql: trace
   logger.org.hibernate.SQL: debug
