--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,6 +4,8 @@ spring:
     url: jdbc:postgresql://localhost:5432/hibernate-knowledge?reWriteBatchedInserts=true
     username: postgres
     password: 12345!fra
+    hikari: 
+      autoCommit: false    
   jpa:
     open-in-view: false
     hibernate.ddl-auto: update
@@ -16,10 +18,9 @@ spring:
         order_updates: true
         batch_versioned_data: true
         format_sql: true
-#        connection.provider_disables_autocommit: true # tells Hibernate that the underlying JDBC Connections already disabled the auto-commit mode.
+        connection.provider_disables_autocommit: true # tells Hibernate that the underlying JDBC Connections already disabled the auto-commit mode.
     show-sql: true
-  hikari: 
-    autoCommit: false    
 logging.level:
   org.hibernate.type.descriptor.sql: trace
   logger.org.hibernate.SQL: debug
+  org.springframework.transaction.interceptor.TransactionAspectSupport: debug
